* Tue Jul 02 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 8.0.1-0
- Updated documentation
  - Cleaned up for `puppet strings`
  - Added REFERENCE.md
  - Updated README.md
- Switched all FIPS checks to use top level inherited checks
- Add Puppet 6 support

* Tue Mar 12 2019 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 8.0.0-0
- Refactored API
- Strong typed all variables and updated functions for puppet 5 compatability.
- Removed support for freeradius version 2 and CentOS 6.
- Inner-tunnel site is not added by default any more.
- Added check for FIPS mode and fail if server is in FIPS mode.
- Created ldap site and module to be used to integrate freeradius
  with ldap server.  Instructions for use are in the README.
- SQL sites are not added by default.
- Update the upper bound of stdlib to < 6.0.0
- Added acceptance and spec tests

* Thu Jul 06 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 7.0.1-0
- Confine puppet version in metadata.json

* Tue Jan 17 2017 Nick Markowski <nmarkowski@keywcorp.com> - 7.0.0-0
- Updated global catalysts
- Refactored module
- Application certs now managed in /etc/pki/simp_apps/freeradius/x509

* Thu Dec 01 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 7.0.0-0
- Updated to use the environment-aware rsync in SIMP 6

* Wed Nov 23 2016 Jeanne Greulich <jgreulich@onyxpoint.com> - 6.0.0-0
- Bump major version number for SIMP 6

* Tue Nov 22 2016 Chris Tessmer <chris.tessmer@onyxpoint.com> - 5.0.4-0
- Minor cleanup

* Tue Nov 15 2016 Liz Nemsick <lnemsick.simp@gmail.com> - 5.0.4-0
- Updated iptables dependency version

* Tue Aug 02 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 5.0.2-0
- Update to the new naming scheme

* Sat May 14 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 5.0.1-0
- Update to fix the absence of the `logdir` variable after the v2/v3 refactor.

* Mon Mar 14 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 5.0.0-0
- Ensure Puppet 4 compatibility. This changes the (always incorrect, but