@@ -1,0 +1,4 @@
+---
+simp_options::ldap::base_dn : 'ou=foo,dc=bar,dc=baz'
+simp_options::ldap::bind_pw : 'password'
+simp_options::ldap::bind_dn : 'dn=test,ou=foo,dc=bar,dc=baz'
