@@ -1,1 +1,2 @@
+# Types of packets to listen for
 type Freeradius::Listen = Enum['auth', 'acct', 'proxy', 'detail', 'status', 'coa']
