@@ -1,1 +1,2 @@
+# Destination for log messages
 type Freeradius::Logdest = Enum[ 'files', 'syslog', 'stdout', 'stderr' ]
