@@ -1,3 +1,4 @@
+# NAS-specific method to use when checking for simultaneous use
 type Freeradius::Nas = Enum[ 'cisco','computone','livingston','max40xx','multitech',
                     'netserver','pathras','patton','portslave','tc','usrhiper','other']
 
