@@ -1,1 +1,2 @@
+# LDAP search scope
 type Freeradius::Scope = Enum[ 'base', 'one', 'sub', 'children' ]
